[tool.poetry]
name = "contextd"
version = "0.1.0"
description = "A Distributed Context Management System with Redis"
authors = ["Lemuel Okoli <lc_okoli@hotmail.com>"]
packages = [
    {include = "backends"},
    {include = "common"}
]


[tool.poetry.dependencies]
python = "^3.11"
pyee = "^11.1.0"
motor = "^3.5.1"
boto3 = "^1.34.160"
minio = "^7.2.7"
asyncio-redis = "^0.16.0"
redis = "^5.0.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
testcontainers = "^4.8.0"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"